<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scan2Reach</string>
    
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    
    <string name="default_web_client_id">466815844554-ddhq9pmgqghjqcetc8ou6er084usubsp.apps.googleusercontent.com</string>
</resources>